[package]
name = "pallet-extra-fungible-events"
edition = "2021"
version.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sdk = { workspace = true, features = ["frame-support", "frame-system"] }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
delegate = { workspace = true }

[features]
default = [ "std" ]
std = [ "sdk/std" ]
try-runtime = [ "sdk/try-runtime" ]
runtime-benchmarks = [ "sdk/runtime-benchmarks" ]
