[package]
name = "pallet-hold-vesting"
version = "28.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-runtime", "sp-std"] }
codec = { workspace = true }
scale-info = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
sdk = { workspace = true, features = ["pallet-balances", "sp-core", "sp-io"] }

[features]
default = [ "std" ]
std = [ "codec/std", "scale-info/std", "sdk/std", "utils/std" ]
runtime-benchmarks = [
	"sdk/frame-benchmarking",
	"sdk/runtime-benchmarks",
	"utils/runtime-benchmarks",
]
try-runtime = [ "sdk/try-runtime" ]
