[package]
name = "pallet-im-online"
version = "27.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Mosaic's I'm online pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sdk = { workspace = true, features = [
		"frame-benchmarking", 
		"frame-support", 
		"frame-system",
		"sp-application-crypto",
		"sp-core",
		"sp-io",
		"sp-runtime",
		"sp-staking",
		"sp-std",
		"pallet-authorship",
		"pallet-session"
]}

codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive", "serde"] }
utils = { workspace = true }

[features]
default = [ "std" ]
std = [ "codec/std", "log/std", "scale-info/std", "sdk/std", "utils/std" ]
runtime-benchmarks = [ "sdk/runtime-benchmarks" ]
try-runtime = [ "sdk/try-runtime" ]
