[package]
name = "pallet-im-online"
description = "Mosaic's I'm online pallet"
version = "27.0.0"
publish = false
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sdk = { workspace = true, features = [
		"frame-support", 
		"frame-system",
		"sp-application-crypto",
		"sp-core",
		"sp-io",
		"sp-runtime",
		"sp-staking",
		"sp-std",
		"pallet-authorship",
]}

pallet-session = { workspace = true }
codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive", "serde"] }
utils = { workspace = true }

[dev-dependencies]
pallet-session = { workspace = true, default-features = false, features = [ "historical" ] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"pallet-session/std",
	"scale-info/std",
	"sdk/std",
	"utils/std",
]
runtime-benchmarks = [
	"sdk/frame-benchmarking",
	"sdk/runtime-benchmarks",
	"utils/runtime-benchmarks",
]
try-runtime = [ "pallet-session/try-runtime", "sdk/try-runtime" ]
