[package]
name = "pallet-nft-delegation"
version.workspace = true
repository.workspace = true
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-runtime", "sp-std", "pallet-nfts"] }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
utils = { workspace = true }
enumflags2 = { workspace = true }

[dev-dependencies]
sdk = { workspace = true, features = ["sp-session", "sp-core", "sp-io", "pallet-balances", "pallet-session"] }
utils = { workspace = true, features = ["runtime-benchmarks"] }

[features]
default = [ "std" ]
std = [ "codec/std", "scale-info/std", "sdk/std", "utils/std" ]
runtime-benchmarks = [
	"sdk/frame-benchmarking",
	"sdk/runtime-benchmarks",
	"utils/runtime-benchmarks",
]
try-runtime = [ "sdk/try-runtime" ]
