[package]
name = "pallet-nft-permission"
edition = "2021"
publish = false
license.workspace = true
version.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-runtime", "sp-std", "pallet-nfts"] }
codec = { workspace = true, features = ["derive"] }
pallet-nft-staking = { workspace = true, optional = true }
scale-info = { workspace = true, features = ["derive"] }
utils = { workspace = true }
enumflags2 = { workspace = true }

[dev-dependencies]
sdk = { workspace = true, features = ["sp-core", "sp-io", "pallet-balances"] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"pallet-nft-staking?/std",
	"scale-info/std",
	"sdk/std",
	"utils/std",
]
runtime-benchmarks = [
	"dep:pallet-nft-staking",
	"pallet-nft-staking?/runtime-benchmarks",
	"sdk/frame-benchmarking",
	"sdk/runtime-benchmarks",
	"utils/runtime-benchmarks",
]
try-runtime = [ "pallet-nft-staking?/try-runtime", "sdk/try-runtime" ]
