[package]
name = "pallet-staking-incentive"
edition = "2021"
version.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-std", "sp-runtime", "sp-arithmetic"] }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
utils = { workspace = true }

[features]
default = [ "std" ]
std = [ "sdk/std", "utils/std" ]
try-runtime = [ "sdk/try-runtime" ]
runtime-benchmarks = [
	"sdk/pallet-balances",
	"sdk/runtime-benchmarks",
	"utils/runtime-benchmarks",
]
