[package]
name = "pallet-staking-incentive"
edition = "2021"
publish = false
license.workspace = true
version.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-std", "sp-runtime", "sp-arithmetic"] }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
utils = { workspace = true }

[dev-dependencies]
sdk = { workspace = true, features = [ "pallet-balances", "sp-core", "sp-io" ] }
pallet-hold-vesting = { workspace = true }

[features]
default = [ "std" ]
std = [ "pallet-hold-vesting/std", "sdk/std", "utils/std" ]
try-runtime = [ "pallet-hold-vesting/try-runtime", "sdk/try-runtime" ]
runtime-benchmarks = [
	"pallet-hold-vesting/runtime-benchmarks",
	"sdk/pallet-balances",
	"sdk/runtime-benchmarks",
	"utils/runtime-benchmarks",
]
