[package]
name = "pallet-treasury"
version = "27.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "FRAME pallet to manage treasury"
readme = "README.md"

[dependencies]
codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
docify = { workspace = true }
impl-trait-for-tuples = { workspace = true }
scale-info = { workspace = true, features = ["derive"]}
serde = { workspace = true, optional = true, default-features = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true, optional = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, default-features = true }
pallet-utility = { workspace = true, default-features = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-utility/std",
	"scale-info/std",
	"serde",
	"sp-core?/std",
	"sp-io/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"dep:sp-core",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-utility/try-runtime",
	"sp-runtime/try-runtime",
]
