[package]
name = "pallet-treasury"
version = "27.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "FRAME pallet to manage treasury"
readme = "README.md"

[dependencies]
sdk = { workspace = true, features = ["frame-support", "frame-system", "frame-benchmarking", "sp-runtime", "sp-core", "sp-std"] }
codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
docify = { workspace = true }
impl-trait-for-tuples = { workspace = true }
scale-info = { workspace = true, features = ["derive"]}
serde = { workspace = true, optional = true, default-features = true, features = ["derive"] }

[dev-dependencies]
sdk = { workspace = true, features = ["sp-io", "pallet-balances", "pallet-utility"] }

[features]
default = [ "std" ]
std = [ "codec/std", "scale-info/std", "sdk/std", "serde" ]
runtime-benchmarks = [ "sdk/runtime-benchmarks" ]
try-runtime = [ "sdk/try-runtime" ]
