[package]
name = "pallet-validator-subset-selection"
version.workspace = true
repository.workspace = true
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-nfts = { workspace = true }
pallet-offences = { workspace = true }
pallet-session = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-application-crypto = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-tracing = { workspace = true }

#Local dependencies
pallet-nft-permission.workspace = true
utils.workspace = true
serde_json = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

utils.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-nft-permission/std",
	"pallet-nfts/std",
	"pallet-offences/std",
	"pallet-session/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-tracing/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
