[package]
name = "pallet-validator-subset-selection"
version.workspace = true
repository.workspace = true
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sdk = { workspace = true, features = ["frame-support", "frame-support", "sp-runtime", "sp-application-crypto", "sp-std", "pallet-session"] }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

#Local dependencies
utils = { workspace = true }

[dev-dependencies]
sdk = { workspace = true, features = ["sp-core", "sp-io", "pallet-balances"] }


[features]
default = [ "std" ]
std = [ "codec/std", "scale-info/std", "utils/std" ]
runtime-benchmarks = [ "sdk/runtime-benchmarks" ]
try-runtime = [ "sdk/try-runtime" ]
