[package]
name = "mosaic-chain-runtime"
version.workspace = true
description = "Mosaic Chain runtime"
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
smallvec = { workspace = true }
codec = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, features = ["derive"] }

sdk = { workspace = true, features = [
	"frame-benchmarking",
	"frame-executive",
	"frame-support",
	"frame-system",
	"frame-system-benchmarking",
	"frame-system-rpc-runtime-api",
	"frame-try-runtime",
	"pallet-aura",
	"pallet-authorship",
	"pallet-balances",
	"pallet-message-queue",
	"pallet-session",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"pallet-proxy",
	"pallet-multisig",
	"pallet-membership",
	"pallet-collective",
	"sp-api",
	"sp-block-builder",
	"sp-consensus-aura",
	"sp-core",
	"sp-genesis-builder",
	"sp-inherents",
	"sp-offchain",
	"sp-runtime",
	"sp-session",
	"sp-std",
	"sp-transaction-pool",
	"sp-version",
	"pallet-xcm",
	"polkadot-parachain-primitives",
	"staging-xcm",
	"polkadot-runtime-common",
	"staging-xcm-builder",
	"staging-xcm-executor",
	"cumulus-pallet-session-benchmarking",
	"cumulus-pallet-xcm",
	"cumulus-pallet-xcmp-queue",
	"cumulus-primitives-aura",
	"cumulus-primitives-core",
	"cumulus-primitives-utility",
	"cumulus-pallet-aura-ext",
	"cumulus-primitives-storage-weight-reclaim",
	"pallet-collator-selection",
	"parachains-common",
	"staging-parachain-info"
]}

# TODO: once procmacros are compatible with umbrella crate remove this
cumulus-pallet-parachain-system = { workspace = true }

# Local
pallet-doas = { workspace = true, default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = [ "std" ]
build-wasm = [ "dep:substrate-wasm-builder" ]

fast-runtime = []
local = [ "fast-runtime" ]

std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
	"log/std",
	"pallet-doas/std",
	"scale-info/std",
	"sdk/std",
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"pallet-doas/runtime-benchmarks",
	"sdk/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"pallet-doas/try-runtime",
	"sdk/try-runtime",
]
